@@ -75,6 +75,12 @@ public:
   void AddFactory(G4String, G4VBasePhysConstrFactory*);
 
   G4VPhysicsConstructor* GetPhysicsConstructor(const G4String& name);
+
+  G4bool IsKnownPhysicsConstructor(const G4String& name);
+
+  std::vector<G4String> AvailablePhysicsConstructors() const;
+
+  void PrintAvailablePhysicsConstructors() const;
     
 private:
 
